--- a/pertemuan-04/Style.css
+++ b/pertemuan-04/Style.css
@@ -3,11 +3,11 @@
   }
 
   body {
-      margin: 0;
-      font-family: arial, sans-serif;
-      background: #f5f5f5;
-      color: #333;
-      line-height: 1.5;
+    margin: 0;
+    font-family: Arial, sans-serif;
+    background: #f5f5f5;
+    color: #333;
+    line-height: 1.5;
   }
 
   header {
@@ -73,6 +73,7 @@
   }
 
   @media (max-width: 600px) {
+    
       header {
           padding: 16px;
           position: sticky;
