--- a/pertemuan-04/Style.css
+++ b/pertemuan-04/Style.css
@@ -1,4 +1,4 @@
-  {
+ * {
       box-sizing: border-box;
   }
 
@@ -25,7 +25,7 @@
       margin: 10px 0 0;
   }
 
-  header li {
+  header li a {
       color: #fff;
       text-decoration: none;
       padding: 6px 12px;
@@ -204,7 +204,6 @@
           flex-direction: column;
           align-items: flex-start;
       }
-  }
 
   #about strong,
   #contact label>span {
@@ -212,3 +211,4 @@
       padding-right: 0;
       margin-bottom: 2px;
   }
+}
