--- a/pertemuan-05/style.css
+++ b/pertemuan-05/style.css
@@ -212,6 +212,14 @@
          top: 8px;
      }
 
+     nav {
+         display: none;
+         flex-direction: column;
+         background: #003366;
+         width: 100%;
+         padding: 5px 0;
+     }
+
 
      #about p,
      #contact label {
