--- a/pertemuan-05/style.css
+++ b/pertemuan-05/style.css
@@ -220,6 +220,10 @@
          padding: 5px 0;
      }
 
+     nav.active {
+         display: flex;
+     }
+
 
      #about p,
      #contact label {
