--- a/pertemuan-06/style.css
+++ b/pertemuan-06/style.css
@@ -1,5 +1,4 @@
-
-*{
+* {
   box-sizing: border-box;
 }
 
@@ -42,6 +41,7 @@ header li a {
   margin: 20px auto;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 #home h2,
 #about h2,
 #contact h2 {
@@ -138,6 +138,7 @@ header li a:active {
     backdrop-filter: saturate(120%);
   }
 }
+
 #about,
 #contact {
   background-color: #ffffff;
@@ -168,7 +169,7 @@ header li a:active {
 }
 
 #about strong,
-#contact label > span {
+#contact label>span {
   min-width: 180px;
   color: #003366;
   font-weight: 600;
@@ -225,20 +226,54 @@ header li a:active {
 }
 
 @media (max-width: 600px) {
+
   #about p,
   #contact label {
     flex-direction: column;
     align-items: flex-start;
   }
+
   #about strong,
-  #contact label > span {
+  #contact label>span {
     text-align: left;
     padding-right: 0;
     margin-bottom: 2px;
   }
+
   #contact input,
   #contact textarea,
   #contact button {
     width: 100%;
+  }
+}
+
+#about p {
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+  margin: 0;
+  padding: 6px 0;
+  border-bottom: 1px solid #e6e6e6
+}
+
+#about strong {
+  min-width: 180px;
+  color: #003366;
+  font-weight: 600;
+  text-align: right;
+  padding-right: 16px;
+  flex-shrink: 0;
+}
+
+@media (max-width: 600px) {
+  #about p {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  #about strong {
+    text-align: left;
+    padding-right: 0;
+    margin-bottom: 2px;
   }
 }
