--- a/pertemuan-08/style.css
+++ b/pertemuan-08/style.css
@@ -61,6 +61,7 @@ header li a:active {
 
 #home,
 #about,
+#entry,
 #contact {
   background-color: #ffffff;
   border-radius: 10px;
@@ -72,6 +73,7 @@ header li a:active {
 
 #home h2,
 #about h2,
+#entry h2,
 #contact h2 {
   color: #003366;
   border-bottom: 2px solid #003366;
@@ -85,7 +87,8 @@ header li a:active {
 }
 
 #about p,
-#contact label {
+#contact label
+#entry label {
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
@@ -95,7 +98,8 @@ header li a:active {
 }
 
 #about strong,
-#contact label>span {
+#contact label>span 
+#entry label>span {
   min-width: 180px;
   color: #003366;
   font-weight: 600;
@@ -105,7 +109,9 @@ header li a:active {
 }
 
 #contact input,
-#contact textarea {
+#contact textarea
+#entry input,
+#entry textarea {
   flex: 1;
   border: 1px solid #ccc;
   border-radius: 6px;
@@ -116,7 +122,8 @@ header li a:active {
   box-sizing: border-box;
 }
 
-#contact button {
+#contact button
+#entry button {
   margin-top: 10px;
   display: inline-block;
   padding: 10px 24px;
@@ -126,6 +133,29 @@ header li a:active {
   border: none;
   transition: all 0.3s ease;
   margin-right: 8px;
+}
+
+#entry button[type="submit"] {
+  background-color: #003366;
+  color: #fff;
+  font-weight: 600;
+}
+
+#entry button[type="reset"] {
+  background-color: #b4b4b4;
+  color: #272727;
+  font-weight: 500;
+}
+
+#entry button[type="submit"]:hover {
+  background-color: #0379ee;
+  transform: translateY(-1px);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+#entry button[type="reset"]:hover {
+  background-color: #cccccc;
+  transform: translateY(-1px);
 }
 
 #contact button[type="submit"] {
@@ -139,6 +169,8 @@ header li a:active {
   color: #272727;
   font-weight: 500;
 }
+
+
 
 #contact button[type="submit"]:hover {
   background-color: #0379ee;
@@ -216,13 +248,15 @@ footer {
   }
 
   #about p,
-  #contact label {
+  #contact label
+  #entry label {
     flex-direction: column;
     align-items: flex-start;
   }
 
   #about strong,
-  #contact label>span {
+  #contact label>span 
+  #entry label>span {
     text-align: left;
     padding-right: 0;
     margin-bottom: 2px;
@@ -230,7 +264,10 @@ footer {
 
   #contact input,
   #contact textarea,
-  #contact button {
+  #contact button 
+  #entry input,
+  #entry textarea,
+  #entry button {
     width: 100%;
   }
 }
